# ser_client-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ml-integration-tests.yml  unit-tests.yml
docker/: .env  docker-compose.yml
docker/certs/: generate-certs.sh
docker/jupyter/: Dockerfile
docker/proftpd/: proftpd.conf
docker/worker/: Dockerfile  audit.py  celery_app.py  poller.py  tasks.py
docs/: domain-model-fhir-alignment.md  ser_demo_notebook.ipynb
src/ser_client_api/: __init__.py  ack_service.py  parser_factory.py
src/ser_client_api/demo/: __init__.py  helpers.py
src/ser_client_api/hl7v2/: __init__.py  ack_service.py  domain_models.py  generator.py  hl7v2_generator.py  institution_config.py  institutions.py  utils.py
src/ser_client_api/hl7v2/auragen/: parser.py
src/ser_client_api/hl7v2/auragen/examples/: clinic_kc_sample_01.json  clinic_mr_sample_01.json  librairies_sample_01.json  software_sample_01.json
src/ser_client_api/hl7v2/auragen/schemas/: meta_clinic_kc.jsd  meta_clinic_mr.jsd  meta_libraries.jsd  meta_software.jsd
src/ser_client_api/hl7v2/gipcad/profiles/v000/: ack_r01_ack.xml  oru_r01_lab36.xml
src/ser_client_api/hl7v2/gleaves/: __init__.py  json_parser.py
src/ser_client_api/hl7v2/perigenomed/: parser.py
src/ser_client_api/hl7v2/seqoia/: parser.py
src/ser_client_api/hl7v2/seqoia/examples/: 6d91642f-40ee-4f8e-afc3-3526101ad1e4.json  ceb02985-8da5-4b7e-87b3-bb55d3d374a8.json
src/ser_client_api/hl7v2/seqoia/schemas/: prescriptions_schema_completed_v2.json
src/ser_client_api/ml/seqoia/: similarity.py
src/ser_client_api/vocabularies/: seqoia.py
src/ser_client_api/vocabularies/gipcad/: Genomic-Pedigree.json  PFMG-Filiere.json  __init__.py  v3-FamilyMember.json
src/ser_client_api/vocabularies/seqoia/: __init__.py  seqoia-relationship-patterns.json  seqoia-to-pfmg-filiere.json  seqoia-to-v3-relationship.json
src/ser_client_api/vocabularies/v3/: v3-inverse-relationships.json
tests/: conftest.py
tests/fixtures/: relationship_regex_examples.json
tests/integration/: test_similarity_ml.py
tests/unit/: test_nk1_relationship.py  test_obx_sidecar_logic.py  test_obx_trio_grouping.py  test_pv1_filiere.py  test_relationship_mapping.py  test_seqoia_parser_validation.py  test_similarity_normalize.py  test_vocabularies.py
(+4 files in other folders)
