[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ser-client-api"
version = "0.1.0"
description = "Core genomics domain models for CAD forwarding connectors"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/ser_client_api/**/*.py",
    "src/ser_client_api/hl7v2/profiles/**",
]

[project.urls]
Repository = "https://github.com/GenomeCAD/ser-client-api"
